addad the destination section

--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ body {
 .description {
     color: #5A5A5D;
     font-size: rem;
-    font-weight: 400;
+    /* font-weight: 400; */
 }
 
 /* universle button  */
@@ -45,7 +45,7 @@ nav {
 .nav-container {
     display: flex;
     justify-content: space-between;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 
 
 }
@@ -64,7 +64,7 @@ nav .title {
 }
 
 nav ul {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     padding-top: 40px;
     text-decoration: none;
@@ -79,7 +79,7 @@ nav li {
 }
 
 .head-banner {
-    border: 2px solid red;
+    /* border: 2px solid red; */
 
     max-width: 1100px;
     width: 100%;
@@ -158,6 +158,8 @@ button {
     width: 50%;
 
 }
+
+/* distination img  */
 .destination{
     text-align: center;
     padding: 30px 200px;
@@ -165,7 +167,32 @@ button {
 
 .img-section .row1{
     display: flex;
-    justify-content: space-;
+    padding: 20px;
     gap: 20px;
 
+}
+
+
+.img-section .row2, .row3{
+    display: flex;
+    padding: 10px;
+    gap: 20px;
+    
+}
+
+.img-section .srilangka, .kasmir{
+    width: 30%;
+}
+.img-section .america{
+    width: 43%;
+}
+
+.img-section .bd{
+    /* width: 30%; */
+}
+
+/* choose-section */
+
+.choose-section{
+    text-align: center;
 }
