--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,34 +1,89 @@
-@media screen and (max-width:576px) {
-    body{
-        padding: 0 !important;
+/* Mobile device  */
 
+@media screen and (max-width:600px) {
+    body{
+        padding: 0%;
     }
+
+    /* nav section  */
     nav{
         flex-direction: column;
     }
-    .nav-item ul{
-        flex-direction: column;
-        justify-content: center;
-        gap: 10px;
-    }
 
-    header .head-banner{
-        width: 100vw;
+    .nav-container{
+        align-items: center;
+        width: 60%;
+        margin: 0 auto;
+        flex-direction: row;
+        
+    }
+    nav ul{
+       
         flex-direction: column;
         align-items: center;
-        /* max-height: 450px; 
-        max-width: 300px; */
+        margin: 0;
+        padding-top: 0px;
+        padding-left: 0px;
+       
+        gap: 5px;
+        
+        
+   
+    }
+     /* banner  */
+
+    .head-banner{
+        width: 100%;
+        /* height: auto; */
+        padding: 20px auto ;
+    ;
+    }  
+    .head-banner .banner-title {
+        font-size: 150%;
+        padding: 30px auto;
+        
+       }
+   .head-banner .banner-buttons{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0%;
         
     }
 
-    .tour-section{
-        flex-direction: column;
-    }
+    .head-banner .banner-description {
+         color: #FFF;
+        font-size: 70%;
+        padding: 10px 40px;
+        justify-content: center;
+        margin: 0;
+        
+    }   
+
+    .head-banner .banner-buttons button{
+        text-align: center;}
+/* tour section  */
+
+.tour-section{
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding: 0;
+    gap: 0px;
+}
+
+.populur-tour {
+    align-items: center;
+    width: 50%;
+    padding: 0;
+    margin: 0%;
     
-    .banner-buttons{
-        flex-direction: column;
-        /* display: grid;
-        grid-template-rows: repeat(1,1fr); */
-    }
+}
     
+
+
+
+
+
 }
