--- a/style/style.css
+++ b/style/style.css
@@ -29,9 +29,10 @@ body {
 /* universle button  */
 .orenge-btn {
     color: #FFF;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     background-color: #FF5400;
     padding: 14px auto;
+
 
 }
 
@@ -233,31 +234,103 @@ button {
 
     background: rgba(41, 206, 246, 0.05);
 }
-.price-section{
-    
+
+.price-section {
+
+    width: 100%;
+    border: 2px solid black;
+
 }
+
 .best-price {
-    
+
     border-radius: 16px;
-    width: 523px;
+    max-width: 523px;
+    width: 100%;
     border: 1px solid rgba(233, 68, 68, 0.20);
     background: rgba(233, 68, 68, 0.05);
-    height: 254px;
+    max-height: 254px;
 
 
 }
 
 
-.discountion .deal{
-    
+.discountion .deal {
+    text-align: center;
+    padding: 10px auto;
+
 }
 
-footer{
-    border: 2px solid black;
+.discountion .pricing {
+    width: 100%;
+    margin-bottom: 20px;
+    gap: 20px;
+
+}
+
+/* Subscribe style  */
+
+.subscribe {
+    margin: 50px auto;
+    display: flex;
+    gap: 20px;
+
+}
+
+.subscribe .subscribe-form {
+    width: 50%;
+    padding: 40px;
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+
+}
+
+.subscribe .subscribe-form input {
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    padding: 10px 16px;
+    border: 0;
+    max-width: 390px;
+    width: 100%;
+    max-height:50px ;
+    height: 100%;
+    font-size: 1rem;
+    margin: 10px;
+
+
+}
+
+
+
+
+.subscribe .save-up {
+    width: 50%;
+}
+
+/* footer style  */
+
+footer {
+
+    background: rgba(19, 19, 24, 0.05);
+    align-items: center;
     max-width: 1100px;
     height: 402px;
+    margin: 20px;
 }
-footer .foott{
-    display: flex;
+
+footer .foott {
+
+    text-align: center;
+    /* display: flex; */
     border-bottom: 2px solid rgba(19, 19, 24, 0.10);
+}
+
+footer .brand-logo {
+    display: flex;
+    justify-content: center;
+}
+
+footer .right {
+    text-align: center;
+
 }
