--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@ body {
     border: 2px solid red;
     font-family: 'Mulish', sans-serif;
     padding: 50px 120px;
+    align-items: center;
 }
 
 
@@ -93,7 +94,7 @@ nav li {
     height: 480px;
     text-align: center;
     border-radius: 16px;
-    background: no-repeat, linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url('/Images/Group\ 13\ .png');
+    background: no-repeat, linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url('../Images/Group\ 13\ .png');
 
 }
 
@@ -143,9 +144,12 @@ button {
     font-size: 1rem;
 
 }
+/* tour-section  */
 
 .tour-section {
     display: flex;
+    max-width: 1100px;
+    width: 100%;
     padding: 50px 2px;
     gap: 10px;
 }
@@ -169,8 +173,10 @@ button {
 
 /* distination img  */
 .destination {
+    max-width: 1100px;
+    width: 100%;
     text-align: center;
-    padding: 30px 200px;
+    /* padding: 30px 200px; */
 }
 
 .img-section .row1 {
