--- a/style/style.css
+++ b/style/style.css
@@ -2,13 +2,15 @@
 
 body {
     max-width: 1100px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     font-family: 'Mulish', sans-serif;
     padding: 50px 120px;
-    align-items: center;
+    margin: 0 auto;
 }
 
+*{border: 2px solid red;
 
+}
 /* text size */
 .bold2 {
     color: #131318;
@@ -42,7 +44,7 @@ span {
 }
 
 nav {
-    max-width: 1100px;
+    /* max-width: 1100px; */
     border: 2px solid red;
     display: flex;
     justify-content: space-between;
@@ -53,14 +55,13 @@ nav {
 .nav-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     /* border: 2px solid red; */
 
 
 }
 
 .nav-container img {
-    align-items: center;
-    margin-top: 30px;
     margin-right: 10px;
     width: 40px;
     height: 40px;
@@ -144,12 +145,13 @@ button {
     font-size: 1rem;
 
 }
+
 /* tour-section  */
 
 .tour-section {
     display: flex;
-    max-width: 1100px;
-    width: 100%;
+    /* max-width: 1100px; */
+    /* width: 100%; */
     padding: 50px 2px;
     gap: 10px;
 }
@@ -160,14 +162,13 @@ button {
 }
 
 .populur-tour {
-    width: 50%;
-    padding: 0 auto;
-    border: 2px solid red;
-    gap: 50px;
+    padding: 10px auto;
+    /* border: 2px solid red;
+    gap: 50px; */
 }
 
 .tour-section.populur-tour img {
-    width: 50%;
+    /* width: 50%; */
 
 }
 
@@ -221,16 +222,20 @@ button {
 }
 
 .service-section .service,
-.hotels {
+.hotels,
+.best-price {
     border-radius: 16px;
-    width: 523px;
-
+    max-width: 523px;
+    padding: 20px 10px;
     height: 254px;
+
+
 }
 
-.hotels {
-    border: 1px solid rgba(251, 181, 99, 0.20);
 
+.hotels {
+    margin: auto;
+    border: 1px solid rgba(251, 181, 99, 0.20);
     background: rgba(251, 181, 99, 0.05);
 }
 
@@ -252,10 +257,16 @@ button {
 
     border-radius: 16px;
     max-width: 523px;
-    width: 100%;
+    margin: 0 auto;
     border: 1px solid rgba(233, 68, 68, 0.20);
     background: rgba(233, 68, 68, 0.05);
-    max-height: 254px;
+    height: 254px;
+
+
+}
+
+.price-section div {
+    align-items: center;
 
 
 }
@@ -274,10 +285,28 @@ button {
 
 }
 
+.discountion{
+    text-align: center;
+}
+.package-btn {
+    margin: 30px;
+    color: #FFF;
+    font-size: 1.4rem;
+    padding: 14px auto;
+    border-radius: 8px;
+    background: #FF5400;
+    width: 210px;
+    height: 52px;
+
+}
+
 /* review-section */
 
-.review-section{
+.review-section {
     display: flex;
+}
+.bd-video{
+    border-radius: 10px;
 }
 
 /* Subscribe style  */
@@ -304,7 +333,7 @@ button {
     border: 0;
     max-width: 390px;
     width: 100%;
-    max-height:50px ;
+    max-height: 50px;
     height: 100%;
     font-size: 1rem;
     margin: 10px;
@@ -324,8 +353,8 @@ button {
 footer {
 
     background: rgba(19, 19, 24, 0.05);
-    align-items: center;
     max-width: 1100px;
+    width: 100%;
     height: 402px;
     margin: 20px;
 }
@@ -340,8 +369,11 @@ footer .foott {
 footer .brand-logo {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
-
+footer .foot-discription{
+    
+}
 footer .right {
     text-align: center;
 
