added more style

--- a/style/style.css
+++ b/style/style.css
@@ -46,8 +46,7 @@ span {
 }
 
 nav {
-    /* max-width: 1100px; */
-    border: 2px solid red;
+
     display: flex;
     justify-content: space-between;
     /* width: 50%; */
@@ -169,7 +168,7 @@ button {
     gap: 50px; */
 }
 
-.tour-section. .location-1{
+.tour-section. .location-1 {
     background-image: url(../Images/Rectangle\ 5.png);
 
 }
@@ -186,7 +185,7 @@ button {
     display: flex;
     padding: 20px;
     gap: 20px;
-    
+
 
 }
 
@@ -252,7 +251,8 @@ button {
 .price-section {
 
     width: 100%;
-    border: 2px solid black;
+    padding-top: 20px;
+    /* border: 2px solid black; */
 
 }
 
@@ -347,11 +347,23 @@ button {
 
 }
 
-
+.Subscribe-btn {
+    width: 380px;
+    height: 40px;
+    padding: 5px 10px;
+}
 
 
 .subscribe .save-up {
-    width: 100%
+    text-align: center;
+    width: 250px;
+    height: 80px;
+    color: #FFF;
+    margin: 0;
+    padding: 0 auto;
+    transform: rotate(-19.628deg);
+    border-radius: 16px;
+    background: #FF5400;
 }
 
 /* footer style  */
