--- a/style/responsive.css
+++ b/style/responsive.css
@@ -114,11 +114,54 @@
     flex-direction: column;
 }
 
+
 .best-price {
     width: 90vw;
     padding: 20px 0px;
 
 }
+
+.booking-1 {
+    display: none;
+    /* max-width: 500px;
+    max-height: 300px;
+    padding: 10px;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px); */
+}
+
+.booking-1{
+    display: none;
+    /* position: relative;
+    bottom: 430px;
+    left: 600px; */
+}
+
+.booking-2 {
+    display: none;
+    /* max-width: 500px;
+    max-height: 300px;
+    padding: 10px;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px); */
+}
+.booking-2{
+    /* bottom: 430px;
+    left: 80px; */
+}
+.booking-3 {
+    display: none;
+    /* max-width: 80vw;
+    max-height: 80vw;
+    padding: 0;
+     */
+}
+
+
 
 .bd-video{
     width: 100%;
