--- a/style/style.css
+++ b/style/style.css
@@ -283,8 +283,8 @@ button {
 
 .discountion .pricing {
     width: 100%;
-    margin-bottom: 20px;
-    gap: 20px;
+    /* margin-bottom: 20px;
+    gap: 20px; */
 
 }
 
